commenting rest of scss greeting animation code

--- a/scss/partials/page-styles/_index-page.scss
+++ b/scss/partials/page-styles/_index-page.scss
@@ -1,121 +1,121 @@
 
 
-.greeting-animation {
-    position: absolute;
-    width:100vw;
-    height:100vh;
-    background: #000;
-    z-index: 20;
-    transform-style: preserve-3d;
-    perspective: 500px;
+// .greeting-animation {
+//     position: absolute;
+//     width:100vw;
+//     height:100vh;
+//     background: #000;
+//     z-index: 20;
+//     transform-style: preserve-3d;
+//     perspective: 500px;
   
-    .greeting-animation__title {
-      z-index: 21;
-      position: absolute;
-      color: rgba(0,0,0,0);
-      text-align: center;
-      width: 100vw;
-      height: 100vh;
-      line-height:100vh;
-      font-size:5vw;
-      font-weight: 500;
+//     .greeting-animation__title {
+//       z-index: 21;
+//       position: absolute;
+//       color: rgba(0,0,0,0);
+//       text-align: center;
+//       width: 100vw;
+//       height: 100vh;
+//       line-height:100vh;
+//       font-size:5vw;
+//       font-weight: 500;
    
-      &:before{
-        content: attr(data-text);
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 0;
-        height: 100vh;
-        color:rgba(128,0,0,1);
-        overflow: hidden;
-        animation: colorText 6s linear alternate 2 none running;
-    }
-    @keyframes colorText {
-       0%, 10% 
-       {
-         width: 0;
-       }
+//       &:before{
+//         content: attr(data-text);
+//         position: absolute;
+//         top: 0;
+//         left: 0;
+//         width: 0;
+//         height: 100vh;
+//         color:rgba(128,0,0,1);
+//         overflow: hidden;
+//         animation: colorText 6s linear alternate 2 none running;
+//     }
+//     @keyframes colorText {
+//        0%, 10% 
+//        {
+//          width: 0;
+//        }
       
-        70%, 90%, 100%
-        {
-          width: 100%;
-        }
-    }
-  }
+//         70%, 90%, 100%
+//         {
+//           width: 100%;
+//         }
+//     }
+//   }
   
-    .banner {
-      position: absolute;
-      top:0; 
-      left: 0;
-      width: 100vw;
-      height: 100vh;
-      overflow: hidden;
-      display: flex;
-      flex-wrap: wrap;
-      .blocks {
-        position: relative;
-        display: block;
-        width: 5vw;
-        height: 5vh;
-        animation: assembleFromCubes 2s ease-in-out forwards;
-        animation-delay: 1s;
-      }
+//     .banner {
+//       position: absolute;
+//       top:0; 
+//       left: 0;
+//       width: 100vw;
+//       height: 100vh;
+//       overflow: hidden;
+//       display: flex;
+//       flex-wrap: wrap;
+//       .blocks {
+//         position: relative;
+//         display: block;
+//         width: 5vw;
+//         height: 5vh;
+//         animation: assembleFromCubes 2s ease-in-out forwards;
+//         animation-delay: 1s;
+//       }
   
-      @keyframes assembleFromCubes {
-        0% {
-          transform: translateZ(2000px);
-          background: url(../media/images/pgdLogo2.jpg);
-          background-position: center;
-          background-attachment: fixed;
-          background-size:cover;
-          box-shadow: 0 5px 15px rgba(0,0,0,0.5);
-        }
-        100% {
-          transform: translateZ(0px);
-          background:  url(../media/images/pgdLogo2.jpg);
-          background-position: center;
-          background-attachment: fixed;
-          background-size:cover;
-          border: 1px solid rgba(0,0,0,0.1);
-          box-shadow: 0 5px 15px rgba(0,0,0,0);
-        }
-      }
-    }
-  }
+//       @keyframes assembleFromCubes {
+//         0% {
+//           transform: translateZ(2000px);
+//           background: url(../media/images/pgdLogo2.jpg);
+//           background-position: center;
+//           background-attachment: fixed;
+//           background-size:cover;
+//           box-shadow: 0 5px 15px rgba(0,0,0,0.5);
+//         }
+//         100% {
+//           transform: translateZ(0px);
+//           background:  url(../media/images/pgdLogo2.jpg);
+//           background-position: center;
+//           background-attachment: fixed;
+//           background-size:cover;
+//           border: 1px solid rgba(0,0,0,0.1);
+//           box-shadow: 0 5px 15px rgba(0,0,0,0);
+//         }
+//       }
+//     }
+//   }
   
-  .active {
-    .banner {
-      .blocks {
-        animation: shatterIntoCubes 2s ease-in-out forwards;
-        background:  url(../media/images/pgdLogo2.jpg);
-          background-position: center;
-          background-attachment: fixed;
-          background-size:cover;
-          border: 1px solid rgba(0,0,0,0.1);
+//   .active {
+//     .banner {
+//       .blocks {
+//         animation: shatterIntoCubes 2s ease-in-out forwards;
+//         background:  url(../media/images/pgdLogo2.jpg);
+//           background-position: center;
+//           background-attachment: fixed;
+//           background-size:cover;
+//           border: 1px solid rgba(0,0,0,0.1);
           
-      }
-      @keyframes shatterIntoCubes {
-        0% {
-          transform: translateZ(0px);
-          background: url(../media/images/pgdLogo2.jpg);
-          background-position: center;
-          background-attachment: fixed;
-          background-size:cover;
-          box-shadow: 0 5px 15px rgba(0,0,0,0.5);
-        }
-        100% {
-          transform: translateZ(2000px);
-          background:  url(../media/images/pgdLogo2.jpg);
-          background-position: center;
-          background-attachment: fixed;
-          background-size:cover;
-          border: 1px solid rgba(0,0,0,0.1);
-          box-shadow: 0 5px 15px rgba(0,0,0,0);
-        }
-      }
-    }
-  } 
+//       }
+//       @keyframes shatterIntoCubes {
+//         0% {
+//           transform: translateZ(0px);
+//           background: url(../media/images/pgdLogo2.jpg);
+//           background-position: center;
+//           background-attachment: fixed;
+//           background-size:cover;
+//           box-shadow: 0 5px 15px rgba(0,0,0,0.5);
+//         }
+//         100% {
+//           transform: translateZ(2000px);
+//           background:  url(../media/images/pgdLogo2.jpg);
+//           background-position: center;
+//           background-attachment: fixed;
+//           background-size:cover;
+//           border: 1px solid rgba(0,0,0,0.1);
+//           box-shadow: 0 5px 15px rgba(0,0,0,0);
+//         }
+//       }
+//     }
+//   } 
   
   .greeting {
     position: absolute;
